--- a/src/index.css
+++ b/src/index.css
@@ -50,14 +50,66 @@
   margin-bottom: 8px;
 }
 
-/* .btn-delete {
-  background-color: rgb(31, 31, 117);
-  color: white;
-  width: 69px;
-  height: 33px;
-  border-radius: 3px;
-  cursor: pointer;
+.blog-preview a {
+  text-decoration: none;
+}
+
+/* blog details page */
+.blog-details h2 {
+  font-size: 20px;
+  color: #f1356d;
+  margin-bottom: 10px;
+}
+.blog-details div {
+  margin: 20px 0;
+}
+.blog-details button {
+  background: #f1356d;
+  color: #fff;
+  border: 0;
+  padding: 8px;
   font-size: 14px;
   font-weight: bold;
-  margin-top: 5px;
-} */
+  border-radius: 9px;
+  cursor: pointer;
+}
+
+/* create new blog form */
+.create {
+  max-width: 400px;
+  margin: 0 auto;
+  text-align: center;
+}
+.create label {
+  text-align: left;
+  display: block;
+}
+.create h2 {
+  font-size: 20px;
+  color: #f1356d;
+  margin-bottom: 30px;
+}
+.create input, .create textarea, .create select {
+  width: 100%;
+  padding: 6px 10px;
+  margin: 10px 0;
+  border: 1px solid #ddd;
+  box-sizing: border-box;
+  display: block;
+}
+.create button {
+  background: #f1356d;
+  color: #fff;
+  border: 0;
+  padding: 8px;
+  font-size: 14px;
+  font-weight: bold;
+  border-radius: 8px;
+  cursor: pointer;
+}
+
+.not-found a {
+  text-decoration: none;
+  font-size: 14px;
+  font-weight: bold;
+}
